Elevenlabs api added.

--- a/echo-backend/package.json
+++ b/echo-backend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
